# francegen

./: .gitignore  Cargo.toml  README.md
docs/: README.md
docs/keynote/: .gitignore  main.tex
docs/users/: configuration.md  getting_started.md
examples/: french_alps.json  french_alps_copc.json
resources/world_template/datapacks/worldpainter/: pack.mcmeta
resources/world_template/datapacks/worldpainter/data/minecraft/dimension_type/: overworld.json
resources/world_template/datapacks/worldpainter/data/minecraft/dimension_type/worldgen/placed_feature/: amethyst_geode.json  spring_feature.json
resources/world_template/datapacks/worldpainter/data/minecraft/worldgen/placed_feature/: spring_lava_overworld.json  spring_water.json
src/: bounds.rs  chunk.rs  chunky.rs  cli.rs  config.rs  constants.rs  copc.rs  generate.rs  geo_utils.rs  georaster.rs  info.rs  locate.rs  main.rs  metadata.rs  osm.rs  progress.rs  wmts.rs  world.rs  world_template.rs
utils/: batch_francegen_25km.py  wms_dl.py
