[package]
name = "francegen"
version = "0.1.0"
edition = "2024"

[dependencies]
fastanvil = "0.31.0"
fastnbt = "2"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
geo-types = "0.7"
tiff = "0.9"
indicatif = "0.17"
owo-colors = "3"
rayon = "1.9"
serde_json = "1"
geo = "0.27"
proj = "0.27"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
roxmltree = "0.19"
urlencoding = "2.1"
flate2 = "1"
